--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ slf4jVersion=1.7.21
 logbackVersion=1.1.7
 sparkVersion=2.1.0
 
-mainClassFile=spark.examples.Main
+mainClassFile=spark.examples.supervised.App
 title='spark-gradle-project'
-group='spark.examples'
+group='spark.examples.supervised'
